# pyguievent

./: README.md  pyguievent.py  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: python-package.yml  python-publish.yml
demos/: basic_window.py
docs/: index.md
pyguievent/: __init__.py
tests/: test_EventSimpleGUI.py  windom_sim.py
