[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyguievent"
version = "0.0.9.post"
description = "A simple tool to create events to PySimpleGUI or PySimpleGUI4"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
    { name = "yunluo", email = "sp91@qq.com" }
]
keywords = [
    "pyguievent",
    "PySimpleEvent",
    "PySimpleGUI",
    "PySimpleGUI4",
    "FreeSimpleGUI",
    "GUI",
    "events for simplegui"
]
requires-python = ">=3"

[project.urls]
Homepage = "https://github.com/yunluo/pyguievent"
Repository = "https://github.com/yunluo/pyguievent"
[tool.uv.extra-build-dependencies]
pyguievent = ["PySimpleGUI4"]
